--- a/_posts/work/2015-01-18-deputy-3.markdown
+++ b/_posts/work/2015-01-18-deputy-3.markdown
@@ -9,19 +9,20 @@ hero_css: "background: #4191ce; color: white;"
 
 jumpLinks:
   - url: goals
-    text: "Project goals"
+    text: "Project Goals"
     icon: goal
   - url: work
-    text: "Getting to work"
+    text: "User Testing"
     icon: work
   - url: challenges
     text: "Challenges"
     icon: challenges
   - url: results
-    text: "Results"
+    text: "Launch"
     icon: results
 
 client:                "Deputy"
+responsibilities:      "Product Design, Front-End Development"
 title:                 "Deputy — Love your business again"
 description:           "In 6 months we overhauled 6 years of product design. Deputy grew its userbase 7x over the following year."
 hero_title:            "Helping SME owners love their business again"
@@ -29,6 +30,10 @@ hero_image:            /assets/images/work/deputy/hero.jpg
 
 subhero_title:         "Manage your team, roster in minutes."
 subhero_subtitle:      "Anywhere. Anytime."
+subhero_resume:        "I worked with the lead designer on overhauling the entire product suite. I was responsible for the redesign of the desktop web app. I performed <strong>user research, iterative prototype development, and developed the design system</strong> still used on their web app today."
+resume_bullets:
+  - Led overhaul of desktop app design, resulting in jump from <strong>40k to 270k</strong> users the following year.
+  - Deputy is now worth <strong>US$423million</strong>
 subhero_description:   "<p>Deputy is a workhorse application for any company that needs scheduled shifts for its employees. It supports scheduling, timesheets, workplace communication, and integrates with supporting software like Xero, Vend and Shopify. Deputy works with a desktop web application, an iPad app, an iPhone app and an Android app, all handling the same data in various ways, for various use cases (the mobile apps are primarily for employees, whereas the desktop app is primarily for employers).</p><p>When I joined Deputy, the product had been in development for just over 6 years. They’d gone through two major iterations of the software. The first version was fairly well-designed, but was overly complex and used dated design patterns. The second version simplified the UI significantly, but it had no conventions or consistency. This led to a lot of cognitive effort trying to understand each screen, as it had no relationship to the others.</p><blockquote>“I just wanted to say how much I love the new-look Deputy web client. You guys have obviously spent a lot of time thinking about the design of the app and it shows. Well done!” <strong>–Jason Tait, a Deputy customer</strong></blockquote>"
 subhero_button_link:   https://www.deputy.com/
 
